editei o login e demais

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
     <div>
-        <img src="imagemFuno.jpg" alt="" class="imagemFundo">
+        <img src="{% static 'login/foto/imagemFuno.jpg' %}" alt="" class="imagemFundo">
     </div>
     <!--Formulario básico-->
     <div class="quadradoMagico">
