--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" 
     content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="{% static 'login/static/style.css' %}">
+    <link rel="stylesheet" href="{% static 'login/style.css' %}">
 </head>
 <body>
     <div class="container">
