correção de bugs sql

--- a/painel_aluno_app/templates/painel_aluno.html
+++ b/painel_aluno_app/templates/painel_aluno.html
@@ -45,7 +45,7 @@
                   <i class="bi bi-chevron-down ms-auto"></i>
                 </button>
                 <div class="collapse show" id="collapseAluno" data-bs-parent="#sidebarAccordion">
-                  <a href="{% url 'painel_aluno' %}" class="nav-link sidebar-option active">
+                  <a href="{% url 'painel_aluno_app:painel_aluno' %}" class="nav-link sidebar-option active">
                     <i class="bi bi-speedometer2"></i>
                     <span>Visão Geral</span>
                   </a>
